--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,15 @@
 /*  your css code here. If applicable */
+#section{
+	padding:12px;
+	background:#f5f5f5;
+}
+.right{
+	text-align:right;
+	font-style:italic;
+}
+.div{
+	color:black;
+	background:white;
+	border:10px
+	
+}
